2011-01-06  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/testGraphProp.cpp: Disable for now.

	* testsuite/testClasp.cpp: Fix signature creation for
	testClaspResultSmall testcase.

	* testsuite/testBlockingClasp.cpp: Only parse 3 models.

	* testsuite/testCombination.cpp: Fix BeliefSet instantiation.
	* include/parser/ClaspResultOnlineParser.h: Likewise.

	* src/dmcs/BeliefCombination.cpp: Add more sanity checks.

	* include/generator/QueryPlanWriter.h: Include QueryPlan.h.

	* include/dmcs/Debug.h (printBeliefStateNicely): Move to Debug.
	* include/dmcs/Makefile.am: Likewise.
	* include/dmcs/BeliefCombination.h: Likewise.
	* src/dmcs/OptDMCS.cpp: Likewise.
	* src/dmcs/Makefile.am: Likewise.
	* src/dmcs/Debug.cpp: Likewise.
	* src/dmcs/BeliefCombination.cpp: Likewise.

2011-01-05  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/testTranslation.cpp: Fix signature.

	* include/parser/BridgeRulesBuilder.tcc: Add more meaningful
	assertions.

	* include/network/Client.tcc: Fix ctor initialisation list.

	* include/mcs/BeliefState.h: Some beautifications.
	* src/dmcs/BeliefCombination.cpp: Likewise.

	* examples/dia-4-4-2-2-1.opt: Fix representation of the interfaces.

	* examples/clasp-result-big.txt: Add terminal 0 to the models.

	* configure.ac: Bump version and fix email address.

2011-01-05  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/dmcs/BaseDMCS.cpp: Clean up.

	* include/solver/SatSolverFactory.h: Add more support for SAT solving.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/dmcs/StreamingDMCS.h: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/solver/RelSatSolver.h: Add SAT related members
	and more support for the SAT solving.

	* include/network/Handler.h: Remove SAT related members.
	* include/network/Handler.tcc: Likewise.



	* examples/pingpong.cmd: New file.
	* examples/pingpong.opt: Likewise.
	* examples/pingpong1.lp: Likewise.