@@ -55,7 +55,8 @@ check_PROGRAMS = \
 testClasp_SOURCES = testClasp.cpp 
 testClasp_LDADD = \
 	$(top_builddir)/src/dmcs/libdmcs.a \
-	$(top_builddir)/src/dmcs/libsatsolver.a \
+	$(top_builddir)/src/process/libprocess.a \
+	$(top_builddir)/src/solver/libsolver.a \
 	$(top_builddir)/src/loopformula/libtranslation.a
 
 testBeliefComparison_SOURCES = testBeliefComparison.cpp
@@ -80,13 +81,15 @@ testQueryPlan_LDADD = $(top_builddir)/src/dmcs/libdmcs.a
 testClaspResultOnlineParser_SOURCES = testClaspResultOnlineParser.cpp
 testClaspResultOnlineParser_LDADD = \
 	$(top_builddir)/src/parser/libparser.a \
-	$(top_builddir)/src/dmcs/libsatsolver.a \
+	$(top_builddir)/src/process/libprocess.a \
+	$(top_builddir)/src/solver/libsolver.a \
 	$(top_builddir)/src/loopformula/libtranslation.a
 
 testBlockingClasp_SOURCES = testBlockingClasp.cpp
 testBlockingClasp_LDADD = \
 	$(top_builddir)/src/parser/libparser.a \
-	$(top_builddir)/src/dmcs/libsatsolver.a \
+	$(top_builddir)/src/process/libprocess.a \
+	$(top_builddir)/src/solver/libsolver.a \
 	$(top_builddir)/src/loopformula/libtranslation.a
 
 testMatch_SOURCES = testMatch.cpp
